syntax = "proto3";

service NoteService {
   rpc Calcular (ResultadoParams) returns (ResultadoResponse) {}
}

// Entidades
message Empty {}
message ResultadoParams {
   string valor = 1;
   string juros = 2;
}

// Respostas
message Resultado {
   string valorInicial = 1;
   string jurosMensal = 2;
   string meses = 3;
   string jurosComposto = 4;
   string montante = 5;
}

message ResultadoResponse {
   repeated Resultado resultado = 1;
}